@@ -1,5 +1,7 @@
 Revision history for Perl extension AnyEvent.
 
+	- include AnyEvent::Intro as a beginner tutorial.
+
 4.11 Fri May 30 23:42:25 CEST 2008
         - INCOMPATIBLE CHANGE: replace ptr by real PTR lookup, provide
           reverse_lookup and reverse_verify to replace it, support
